# qglk

./: CMakeLists.txt  README.md
include/: gi_dispa.h  glk.h  (+1 more)
src/: CMakeLists.txt  dispatch.cpp  dispatch.hpp  exception.hpp  gi_blorb.c  glk.cpp  glk.hpp  main.cpp  object.cpp  object.hpp  qglk.cpp  qglk.hpp  qglk.ui  qglk_blorb.cpp  qglk_char.cpp  qglk_dispatch.cpp  qglk_event.cpp  qglk_fileref.cpp  qglk_sound.cpp  qglk_stream.cpp  qglk_time.cpp  qglk_unix.cpp  qglk_window.cpp
src/blorb/: CMakeLists.txt  chunk.cpp  chunk.hpp
src/event/: CMakeLists.txt  eventqueue.cpp  eventqueue.hpp
src/file/: CMakeLists.txt  fileref.cpp  fileref.hpp
src/lib/coroutine/: CMakeLists.txt
src/log/: CMakeLists.txt  format.hpp  log.cpp  log.hpp  pointerwrap.hpp
src/sound/: CMakeLists.txt  schannel.cpp  schannel.hpp
src/stream/: CMakeLists.txt  chunk_driver.hpp  chunkbuf.cpp  chunkbuf.hpp  latin1stream.cpp  latin1stream.hpp  membuf.cpp  membuf.hpp  memory_driver.hpp  null_driver.cpp  null_driver.hpp  nullbuf.cpp  nullbuf.hpp  nulldevice.cpp  nulldevice.hpp  stream.cpp  stream.hpp  unicodestream.cpp  unicodestream.hpp
src/thread/: CMakeLists.txt  taskrequest.cpp  taskrequest.hpp
src/window/: CMakeLists.txt  blankwindow.cpp  blankwindow.hpp  blankwindowcontroller.cpp  blankwindowcontroller.hpp  constraint.cpp  constraint.hpp  graphicswidget.cpp  graphicswidget.hpp  graphicswindow.cpp  graphicswindow.hpp  graphicswindowcontroller.cpp  graphicswindowcontroller.hpp  inputprovider.cpp  inputprovider.hpp  pairwidget.cpp  pairwidget.hpp  pairwindow.cpp  pairwindow.hpp  pairwindowcontroller.cpp  pairwindowcontroller.hpp  style.cpp  style.hpp  stylemanager.cpp  stylemanager.hpp  textbufferwidget.cpp  textbufferwidget.hpp  textbufferwindow.cpp  textbufferwindow.hpp  textbufferwindowcontroller.cpp  textbufferwindowcontroller.hpp  textgridwidget.cpp  textgridwidget.hpp  textgridwindow.cpp  textgridwindow.hpp  textgridwindowcontroller.cpp  textgridwindowcontroller.hpp  window.cpp  window.hpp  window_stream_driver.hpp  (+6 more)
test/: CMakeLists.txt  main.c
test/bocfel/: CMakeLists.txt
test/git/: CMakeLists.txt
test/git-1.3.5/: glkop.c
test/glkterm/: CMakeLists.txt
test/glulxe/: CMakeLists.txt
test/model/: CMakeLists.txt  model.c
test/multiwin/: CMakeLists.txt
test/nitfol/: CMakeLists.txt
test/nitfol-0.5_p1/: nitfol.h  startunix.c
test/nitfol/0.5_p1/: inform.y
test/tads/: CMakeLists.txt
test/tads-3.0.8/: NEWS  README
test/tads-3.0.8/tads2/: biosvid.h  os.h  osifc.h  osunixt.c  std.t  suprun.c  tadsver.htm  tadsver.uni  tcd.c  trd.c  voc.c
test/tads-3.0.8/tads2/glk/: Makefile  os_glk.c  os_glk.h  oss_glk.c
test/tads-3.0.8/tads3/: msgcomp.cpp  osunix.c  osunix3.c  rcmain.cpp  tccmdutl.cpp  tcerrmsg.cpp  tcerrnum.h  tcmain.cpp  tcmake.cpp  tcpndrv.h  tcpnint.h  tcprsstm.cpp  tcprstyp.h  tcsrc.h  tct3.cpp  tct3drv.h  tct3img.cpp  tct3stm.cpp  test_chr.cpp  test_obj.cpp  test_prs.cpp  uni_case.cpp  vmbifreg.cpp  vmbift3.cpp  vmbiftf.cpp  vmbignum.cpp  vmbytarr.cpp  vmcfgfl.cpp  vmcfgsw.cpp  vmconsol.cpp  vmconsol.h  vmcore.cpp  vmdict.cpp  vmdict.h  vmerrnum.h  vmfilobj.cpp  vmfilobj.h  vmglob.h  vmgram.h  vmhash.h  (+24 more)
test/tads-3.0.8/tads3/BSD/: wchar.h
test/tads-3.0.8/tads3/doc/: articles.htm  t3apiorg.htm  t3build.htm  t3bytarr.htm  t3coll.htm  t3dict.htm  t3dispfn.htm  t3enum.htm  t3expr.htm  t3fctl.htm  t3fmt.htm  t3frame.htm  t3gc.htm  t3gram.htm  t3hello.htm  t3icext.htm  t3intcl.htm  t3intfn.htm  t3intro.htm  t3iter.htm  t3list.htm  t3lookup.htm  t3parse.htm  t3pp.htm  t3refl.htm  t3str.htm  t3tadsio.htm  t3tgen.htm  t3undef.htm  t3vector.htm
test/tads-3.0.8/tads3/samples/: bantest.t  starti3.t
test/tads-3.0.8/tads3/t3include/: bignum.h  charset.h  file.h  gramprod.h  lookup.h  reflect.h  t3test.h  tadsgen.h  tadsio.h  tok.h  vector.h
test/tads-3.0.8/tads3/t3library/: file.t  gameinfo.t
test/tads-3.0.8/tads3/t3library/adv3/: actions.t  actor.t  adv3.h  adv3.tl  banner.t  events.t  exec.t  exits.t  extras.t  hintsys.t  lister.t  menusys.t  modid.t  numbers.t  objects.t  output.t  parser.t  score.t  status.t  verify.t
test/tads-3.0.8/tads3/t3library/adv3/en_us/: en_us.h  instruct.t
test/tads-3.0.8/tads3/test/scripts/: run_all_tests  test_env  test_ex  test_pre
test/tads/3.0.8/: CHANGES  INSTALL
test/tads/3.0.8/tads2/: Makefile  adv.t  appctx.h  biosvid.c  dbgu.c  execmd.c  gccstdar.h  oemunix.c  os0tc_un.c  os0td_un.c  os0tr_un.c  osdbg.h  osdbg_un.h  osgen3.c  osnoui.c  osunixt.h  output.c  tdd.c  tio.h  tparm.c  tputs.c  trcolor.c  trd.h  vocab.c
test/tads/3.0.8/tads2/glk/: os_glk.c
test/tads/3.0.8/tads3/: Makefile  charmap.cpp  charmap.h  mkchrtab.cpp  os_stdio.cpp  tclibprs.cpp  tclibprs.h  tcmakecl.cpp  tcprs.cpp  tcprs.h  tcsrc.cpp  tct3.h  tct3base.h  tctok.cpp  tctok.h  tcvsn.h  test_exec.cpp  test_regex.cpp  vmbif.cpp  vmbif.h  vmbiftad.cpp  vmbiftio.cpp  vmbiftio.h  vmcfgmem.cpp  vmcl23.cpp  vmcoll.cpp  vmconhmp.cpp  vmcset.cpp  vmerr.cpp  vmerr.h  vmerrmsg.cpp  vmglobv.h  vmgram.cpp  vmhost.h  vmhostsi.cpp  vmhostsi.h  vmimage.cpp  vmimg_d.cpp  vmimgrb.cpp  vminitim.cpp  (+13 more)
test/tads/3.0.8/tads3/doc/: changes.htm  index.htm  lib_cont.htm  t3alone.htm  t3anonfn.htm  t3banner.htm  t3bignum.htm  t3chars.htm  t3cmap.htm  t3cset.htm  t3dynobj.htm  t3exc.htm  t3export.htm  t3file.htm  t3icic.htm  t3libpre.htm  t3naming.htm  t3obj.htm  t3objcl.htm  t3regex.htm  t3rexpat.htm  t3run.htm  t3start.htm  t3stm.htm  t3strcmp.htm  t3t3.htm  t3term.htm  t3tobj.htm  t3tok.htm  t3trans.htm  t3type.htm  tads3.htm
test/tads/3.0.8/tads3/samples/: sample.t  sample.t3m
test/tads/3.0.8/tads3/t3include/: bytearr.h  dict.h  strcomp.h  systype.h  t3.h  tads.h
test/tads/3.0.8/tads3/t3library/: _main.t  reflect.t  system.tl
test/tads/3.0.8/tads3/t3library/adv3/: action.t  changes.htm  disambig.t  footnote.t  input.t  misc.t  pov.t  precond.t  report.t  resolver.t  sense.t  thing.t  to_do.txt  travel.t
test/tads/3.0.8/tads3/t3library/adv3/en_us/: en_us.t  msg_neu.t
test/tads/3.0.8/tads3/t3resource/charmap/: cmaplib.t3r
test/tads/3.0.8/tads3/test/scripts/: test_make
(+14 files in other folders)
